Fix: if page given is out of bounds reset to page 1.

--- a/demo/client/demo.css
+++ b/demo/client/demo.css
@@ -1,1 +1,5 @@
 /* CSS declarations go here */
+.cell {
+  text-align: center;
+  background: #eee;
+}
